# NeuronalNetwork

./: CMakeLists.txt  config.json
include/: common_interface.hpp  config.h  connection.h  connection.hpp  connection_impl.hpp  functions.h  layer.hpp  layer_impl.hpp  network.hpp  network_impl.hpp  neuron.hpp  neuron_impl.hpp  signal.hpp  signal_impl.hpp  types.h
include/network/: common_interface.hpp  config.h  connection.h  functions.h  layer.hpp  layer_impl.hpp  network.hpp  network_impl.hpp  neuron.hpp  neuron_impl.hpp  signal.hpp  types.h
include/train/: adapt.hpp  eval.hpp  learn_data.hpp  train.hpp  train_data.hpp  train_impl.hpp
src/: config.cpp  connection.cpp  functions.cpp  own_network_main.cpp  types.cpp
src/apps/: network_test.cpp  own_network_main.cpp  train_test.cpp
src/network/: config.cpp  connection.cpp  functions.cpp  types.cpp
test/: CMakeLists.txt  layer.cpp
